k8s.template.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    external-dns.alpha.kubernetes.io/hostname: twitch-dnd.paul-steele.com
    external-dns.alpha.kubernetes.io/target: "paulsteelehome.duckdns.org"
  name: twitch-dnd
  namespace: deployments
spec:
  rules:
    - host: twitch-dnd.paul-steele.com
      http:
        paths:
          - backend:
              serviceName: twitch-dnd
              servicePort: 80
            path: /
  tls:
    - hosts:
        - twitch-dnd.paul-steele.com
---
apiVersion: v1
kind: Service
metadata:
  name: twitch-dnd
  namespace: deployments
spec:
  selector:
    app: twitch-dnd
  ports:
    - name: twitch-dnd
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitch-dnd
  namespace: deployments
  labels:
    app: twitch-dnd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: twitch-dnd
  template:
    metadata:
      labels:
        app: twitch-dnd
    spec:
      containers:
        - name: twitch-dnd
          image: registry.paul-steele.com/twitch-dnd:$BUILD_TAG
          ports:
            - name: twitch-dnd
              containerPort: 80
          imagePullPolicy: Always
      imagePullSecrets:
        - name: registry.paul-steele.com
